Removed warnings, fix dimensions for init